# wedding-rs-vp

./: .gitignore  Cargo.toml  README.md  Rocket.toml  add_guests.py  generate_codes.py
src/: main.rs  models.rs  schema.rs
static/: ghost_code_injection.css
templates/: add.html.tera  admin.html.tera  edit.html.tera  footer.html.tera  form.html.tera  fuckyou.html.tera  header.html.tera  index.html.tera  slowdown.html.tera  submit_edit.html.tera  thankyou.html.tera
